feat: add changes

--- a/index.html
+++ b/index.html
@@ -7552,7 +7552,7 @@ a.anchor-link {
 <h2 id="Problema">Problema<a class="anchor-link" href="#Problema">¶</a></h2><p><strong>Motivação</strong>: gostaria de compreender o impacto do gênero do jogo nas vendas, analisando o total de unidades vendidas desde o ano de lançamento de cada título. Meu objetivo é identificar as tendências entre as diferentes categorias de jogos.</p>
 <p><strong>Hipótese</strong>: jogos de ação são mais vendidos do que jogos de simulação.</p>
 <a href="https://imgbb.com/"><img src="https://i.ibb.co/GkSYVxd/New-Project-1-2.gif" alt="New-Project-1-2" border="0" /></a>
-<h2 id="Dados">Dados<a class="anchor-link" href="#Dados">¶</a></h2><p>Necessitamos de uma base de dados com a quantidade de unidades vendidas por jogo desde o seu lançamento. Para esta análise, será utilizado o conjunto de dados <a href="https://www.kaggle.com/datasets/hernan4444/anime-recommendation-database-2020?select=watching_status.csv">Video Games Sales</a>. Através do Kaggle, consegui rastrear a fonte desses dados como sendo obtidos pelo <strong>vgchartz</strong>, que é um site de monitoramento de vendas de jogos eletrônicos. Vale ressaltar que desde 2018 o <strong>vgchartz</strong> apenas registra dados oficiais de vendas de software disponibilizados por programadores e distribuidores (essa informação pode ser encontrada no site do <a href="https://www.vgchartz.com/methodology.php">vgchartz</a>).</p>
+<h2 id="Dados">Dados<a class="anchor-link" href="#Dados">¶</a></h2><p>Necessitamos de uma base de dados com a quantidade de unidades vendidas por jogo desde o seu lançamento. Para esta análise, será utilizado o conjunto de dados <a href="https://www.kaggle.com/datasets/ulrikthygepedersen/video-games-sales">Video Games Sales</a>. Através do Kaggle, consegui rastrear a fonte desses dados como sendo obtidos pelo <strong>vgchartz</strong>, que é um site de monitoramento de vendas de jogos eletrônicos. Vale ressaltar que desde 2018 o <strong>vgchartz</strong> apenas registra dados oficiais de vendas de software disponibilizados por programadores e distribuidores (essa informação pode ser encontrada no site do <a href="https://www.vgchartz.com/methodology.php">vgchartz</a>).</p>
 <p>A base contém um único arquivo chamado <strong>video_games_sales.csv</strong>. Este arquivo possui as seguintes colunas:</p>
 <ul>
 <li><strong>rank</strong>: posição do jogo em relação ao número total de cópias vendidas</li>
@@ -7951,11 +7951,11 @@ As colunas são: rank, name, platform, year, genre, publisher, na_sales, eu_sale
 <li>A variável <strong>year</strong> é uma variável quantitativa discreta</li>
 <li>A variável <strong>genre</strong> é uma variável qualitativa nominal</li>
 <li>A variável <strong>publisher</strong> é uma variável qualitativa nominal</li>
-<li>A variável <strong>na_sales</strong> é uma variável quantitativa contínua</li>
-<li>A variável <strong>eu_sales</strong> é uma variável quantitativa contínua</li>
-<li>A variável <strong>jp_sales</strong> é uma variável quantitativa contínua</li>
-<li>A variável <strong>other_sales</strong> é uma variável quantitativa contínua</li>
-<li>A variável <strong>global_sales</strong> é uma variável quantitativa contínua</li>
+<li>A variável <strong>na_sales</strong> é uma variável quantitativa discreta</li>
+<li>A variável <strong>eu_sales</strong> é uma variável quantitativa discreta</li>
+<li>A variável <strong>jp_sales</strong> é uma variável quantitativa discreta</li>
+<li>A variável <strong>other_sales</strong> é uma variável quantitativa discreta</li>
+<li>A variável <strong>global_sales</strong> é uma variável quantitativa discreta</li>
 </ul>
 </div>
 </div>
